--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <h1>no need for this to be upper case!!</h1>
-    <h3>what is all this now?</h3>
+    <h1> hello {{world}}!</h1>
 </body>
 
 </html>
