--- a/themes/default/templates/index.html
+++ b/themes/default/templates/index.html
@@ -10,8 +10,17 @@
 </head>
 
 <body>
-    <h1>Hello {{world}}!</h1>
-    {% include "post.html" %}
+    <div>
+        {% for post in posts %}
+        <a href="posts/{{post.slug}}.html">
+            <h2>
+                {{post.title}}
+            </h2>
+        </a>
+        <p>
+            {{post.content}}
+        </p>
+        {% endfor%}
+    </div>
 </body>
-
 </html>
