--- a/themes/default/templates/post.html
+++ b/themes/default/templates/post.html
@@ -1,5 +1,8 @@
 <div>
     <h3>
-        "this is a post here! {{title}}"
+        {{title}}
     </h3>
+    <p>
+        {{content}}
+    </p>
 </div>
