--- a/themes/default/templates/index.html
+++ b/themes/default/templates/index.html
@@ -1,26 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/main.css">
-    <title>{{title}}</title>
-</head>
-
-<body>
-    <div>
-        {% for post in posts %}
-        <a href="posts/{{post.slug}}.html">
-            <h2>
-                {{post.title}}
-            </h2>
-        </a>
-        <p>
-            {{post.content}}
-        </p>
-        {% endfor%}
-    </div>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+<div>
+    {% for post in posts %}
+    <a href="posts/{{post.slug}}.html">
+        <h2>
+            {{post.title}}
+        </h2>
+    </a>
+    <p>
+        {{post.content}}
+    </p>
+    {% endfor%}
+</div>
+{% endblock content %}
