--- a/themes/default/templates/post.html
+++ b/themes/default/templates/post.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{% block title %} | post - {{slug}}{% endblock title %}
+{% block content %}
 <div>
     <h3>
         {{title}}
@@ -6,3 +9,4 @@
         {{content}}
     </p>
 </div>
+{% endblock content %}
