--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/main.css">
+    <link rel="stylesheet" href="/static/main.css">
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4/css/tachyons.min.css">
     <title>{{site_title}} {% block title %}{% endblock title %}</title>
 </head>
 
 <body>
-    <div>{%block content%}{% endblock content%}</div>
+    {% include "nav.html" %}
+    <div class="pa3 ph5-ns">{%block content%}{% endblock content%}</div>
 </body>
 
 </html>
