--- a/themes/default/templates/index.html
+++ b/themes/default/templates/index.html
@@ -3,8 +3,8 @@
 {% for post in posts %}
 <article>
     <h2>
-        <a href="posts/{{post.slug}}.html">
-            {{post.title}}
+        <a href="posts/{{post.meta.slug}}.html">
+            {{post.meta.title}}
         </a>
     </h2>
 </article>
