--- a/themes/default/templates/post.html
+++ b/themes/default/templates/post.html
@@ -1,12 +1,7 @@
 {% extends "base.html" %}
-{% block title %} | post - {{slug}}{% endblock title %}
+{% block title %} | post - {{meta.slug}}{% endblock title %}
 {% block content %}
 <div>
-    <h3>
-        {{title}}
-    </h3>
-    <p>
-        {{content}}
-    </p>
+    {{content}}
 </div>
 {% endblock content %}
