--- a/themes/default/templates/post.html
+++ b/themes/default/templates/post.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} | post - {{meta.slug}}{% endblock title %}
+{% block title %} | {{meta.title}}{% endblock title %}
 {% block content %}
 <div>
     {{content}}
