--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -2,17 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/main.css">
-    <link rel="stylesheet" href="https://unpkg.com/tachyons@4/css/tachyons.min.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/static/tailwind.css" rel="stylesheet">
     <title>{{site_title}} {% block title %}{% endblock title %}</title>
 </head>
 
-<body>
+<body class="p-4 md:pt-8 container md:mx-auto">
     {% include "nav.html" %}
-    <div class="pa3 ph5-ns">{%block content%}{% endblock content%}</div>
+    <div>{%block content%}{% endblock content%}</div>
 </body>
 
 </html>
