--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -10,7 +10,9 @@
 
 <body class="p-4 md:pt-8 container md:mx-auto">
     {% include "nav.html" %}
-    <div>{%block content%}{% endblock content%}</div>
+    <div>
+        {%block content%}{% endblock content%}
+    </div>
 </body>
 
 </html>
