--- a/themes/default/templates/page.html
+++ b/themes/default/templates/page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %} | {{meta.title}}{% endblock title %}
 {% block content %}
-<div>
+<div class="markdown max-w-xl">
     {{content}}
 </div>
 {% endblock content %}
